[tool.poetry]
name = "m2m-client"
version = "0.1.0"
description = ""
authors = ["Thomas Weatherston <thomasweatherston@gmail.com>"]
readme = "README.md"
packages = [{include = "m2m_client"}]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.27.0"
typing-extensions = "^4.11.0"
pydantic = "^2.7.1"
authlib = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
